kubernetes/infrastructure/configs/istio/ingress-class.yaml
---
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: istio
  annotations:
    ingressclass.kubernetes.io/is-default-class: "false"
spec:
  controller: istio.io/ingress-controller
