kubernetes/infrastructure/configs/istio/external-gateway.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.mcf.io/gateways.networking.k8s.io/gateway_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: external-gateway
  annotations:
    io.cilium/lb-ipam-ips: 192.168.45.242
spec:
  gatewayClassName: istio
  listeners:
    - name: http
      port: 80
      protocol: HTTP
    - name: https
      hostname: '*.mcf.io'
      port: 443
      protocol: HTTPS
      tls:
        mode: Terminate
        certificateRefs:
          - name: mcf-io-cert-tls
      allowedRoutes:
        namespaces:
          from: All
