kubernetes/infrastructure/configs/istio/gateway.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.mcf.io/networking.istio.io/gateway_v1alpha3.json
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istio-ingressgateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http2
        protocol: HTTP
      hosts:
        - milton.mcf.io
        - '*.milton.mcf.io'
      tls:
        httpsRedirect: true
    - port:
        number: 443
        name: https
        protocol: HTTPS
      hosts:
        - milton.mcf.io
        - '*.milton.mcf.io'
      tls:
        credentialName: milton-mcf-io-cert-tls
        mode: SIMPLE
        minProtocolVersion: TLSV1_2
        maxProtocolVersion: TLSV1_3
